<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
        <TextView
            android:id="@+id/txtView"
            android:layout_width="wrap_content"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:text="@string/hello_from_second_page"/>
        <Button
            android:id="@+id/btnResult"
            android:text="@string/say_hello_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnFirstActivity"
            android:text="@string/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>