<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/screen_1" />
<!--
Be careful when changing the tag type, for
ex.: from Button to ImageButton
-->

    <ImageButton
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/page_2"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/btnGoToPage2" />

    <Button
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/request_data_back"
        android:id="@+id/btnReturnResult" />

</LinearLayout>